# home-loans-backend

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.github/: deploy_api.yaml
.github/workflows/: cd-backend.yml  ci-backend.yml  ci-docker-image.yml  docker-image.yml
libs/lib-auth/: Cargo.toml
libs/lib-auth/src/: config.rs  lib.rs
libs/lib-auth/src/oauth/: error.rs  mod.rs  oauth_client.rs
libs/lib-auth/src/token/: error.rs  jwt.rs  mod.rs
libs/lib-cron/: Cargo.toml
libs/lib-intg/: Cargo.toml
libs/lib-intg/src/: lib.rs  models.rs
libs/lib-intg/src/crs/: mod.rs  property_sales_repo.rs  stock_exchange_repo.rs
libs/lib-intg/src/repos/: commercial_bank_repo.rs  error.rs  mod.rs  property_sales_repo.rs  retail_bank_repo.rs  stock_exchange_repo.rs  tax_repo.rs  tax_repo_old.rs
libs/lib-loki/: Cargo.toml
libs/lib-loki/src/: config.rs  error.rs  lib.rs
libs/lib-mq/: Cargo.toml
libs/lib-mq/src/: lib.rs  testing_queue_stuff.rs
libs/lib-mq/src/rabbit/: config.rs  error.rs  mod.rs  rabbitmq.rs
libs/lib-queue/: Cargo.toml
libs/lib-queue/src/: cdc.rs  error.rs  lib.rs  sqs.rs
libs/lib-sql/: Cargo.toml
libs/lib-sql/src/: config.rs  dbx.rs  error.rs  lib.rs
libs/lib-sqs/: Cargo.toml
libs/lib-sqs/src/: lib.rs
libs/lib-util/src/: time.rs
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: envs.rs  lib.rs
migrations/: 20240622115745_init.sql  20240628224315_cdc_trigger.sql  20240703071100_create_tables.sql  20240703115342_create_tables_3.sql  20240703122759_seeding_script.sql  20240703135045_update_sars.sql  20240703142748_lambdas.sql
open_api_docs/: README.md  spec.json
services/web-server/: Cargo.toml
services/web-server/src/: config.rs  main.rs
services/web-server/src/log/: mod.rs
services/web-server/src/web/: error.rs  mod.rs  models.rs  mw_auth.rs  mw_auth_mtls.rs  mw_request_stamp.rs  mw_response_mapper.rs  routes.rs  routes_docs.rs  routes_home_loan.rs
