[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
resolver = "2"
members = [
    #    -- Application Services
    "services/web-server",
    #    -- Application Libraries
    "libs/lib-util",
    "libs/lib-mq",
    "libs/lib-cron",
    "libs/lib-intg",
    "libs/lib-loki",
    "libs/lib-auth",
    "libs/lib-sql"]

[workspace.dependencies]
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }

