[package]
name = "lib-intg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["gzip", "json", "__rustls"] }
uuid = { version = "1.9.1", features = ["serde"] }
derive_more = "1.0.0-beta.6"
serde_with = "3.8.1"
url = "2.5.2"
serde_json = "1.0.118"
tokio = "1.38.0"

[lints]
workspace = true
