[package]
name = "lib-intg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["gzip", "json", "__rustls-ring", "native-tls"] }
uuid = { version = "1.9.1", features = ["serde"] }
derive_more = "1.0.0-beta.6"
serde_with = "3.8.1"
url = "2.5.2"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
async-trait = "0.1.80"
log = "0.4.21"



[lints]
workspace = true
