[package]
name = "lib-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.203"
aws-sdk-sqs = "1.33.0"
derive_more = "1.0.0-beta.6"
serde_with = "3.8.1"
serde_json = "1.0.118"
sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "postgres", "uuid"] }
tracing = "0.1.40"
async-trait = "0.1.80"
aws-config = "1.5.3"
aws-smithy-runtime-api = "1.7.0"

[lints]
workspace = true
