[package]
name = "lib-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_with = "3.8.1"
derive_more = { workspace = true }
lib-utils = { path = "../lib-util" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["default"] }
sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "postgres", "uuid"] }
[lints]
workspace = true
